@@ -2,7 +2,7 @@
     <parent>
         <groupId>io.antmedia</groupId>
         <artifactId>parent</artifactId>
-        <version>2.4.3-SNAPSHOT</version>
+        <version>2.8.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>ant-media-server</artifactId>
@@ -69,7 +69,8 @@
         <finalName>${project.artifactId}</finalName>
         <maven.build.timestamp.format>yyyyMMdd_HHmm</maven.build.timestamp.format>
         <buildNumber>${maven.build.timestamp}</buildNumber>
-
+        <!-- keep it blank -->
+		<enterprise.profile></enterprise.profile>
     </properties>
 
     <build>
@@ -190,14 +191,14 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <useSystemClassLoader>false</useSystemClassLoader>
-                    <argLine>@{argLine} --illegal-access=permit -Xmx750M -XX:+UseG1GC -XX:MaxGCPauseMillis=100 -Djava.library.path=${project.basedir}/src/main/server/lib/native-linux-x86_64</argLine>
+                    <argLine>@{argLine} -Xmx750M -XX:+UseG1GC -XX:MaxGCPauseMillis=100 -Djava.library.path=${project.basedir}/src/main/server/lib/native-linux-x86_64</argLine>
                 	<skipAfterFailureCount>1</skipAfterFailureCount>
                 </configuration>
             </plugin>
              <plugin>
 			    <groupId>org.jacoco</groupId>
 			    <artifactId>jacoco-maven-plugin</artifactId>
-			    <version>0.8.5</version>
+			    <version>${jacoco-maven-plugin.version}</version>
 			    <executions>
 			        <execution>
 			            <goals>
@@ -232,6 +233,7 @@
                    				 <title>Ant Media Server REST API Reference</title>
                    				 <version>${project.parent.version}</version>
                    			</info>
+                   			<host>test.antmedia.io:5443/Sandbox/rest/</host>
                         </apiSource>
                     </apiSources>
                 </configuration>
@@ -261,12 +263,6 @@
                 </execution>
               </executions>
             </plugin>
-
-            <!-- >>>>>>> master <plugin> <groupId>com.webcohesion.enunciate</groupId>
-                <artifactId>enunciate-maven-plugin</artifactId> <version>${enunciate.version}</version>
-                <executions> <execution> <goals> <goal>docs</goal> </goals> <configuration>
-                <configFile>enunciate.xml</configFile> <docsDir>${project.build.directory}</docsDir>
-                </configuration> </execution> </executions> </plugin> -->
         </plugins>
          </pluginManagement>
     </build>
@@ -274,13 +270,13 @@
         <dependency>
             <groupId>io.antmedia.ipcamera.onvif</groupId>
             <artifactId>ONVIF</artifactId>
-            <version>1.1.0-SNAPSHOT</version>
+            <version>1.2.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
 		    <groupId>org.mitre.dsmiley.httpproxy</groupId>
 		    <artifactId>smiley-http-proxy-servlet</artifactId>
-		    <version>1.12.1</version>
+		    <version>${smiley-http-proxy-servlet.version}</version>
 		</dependency>
         <dependency>
             <groupId>org.apache.tomcat</groupId>
@@ -305,26 +301,6 @@
             <artifactId>slf4j-api</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>jcl-over-slf4j</artifactId>
-            <version>${slf4j.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>jul-to-slf4j</artifactId>
-            <version>${slf4j.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>log4j-over-slf4j</artifactId>
-            <version>${slf4j.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-access</artifactId>
-            <version>${logback.version}</version>
-        </dependency>
-        <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-core</artifactId>
             <version>${logback.version}</version>
@@ -346,8 +322,6 @@
             <version>${protobuf-java.version}</version>
             <scope>provided</scope>
         </dependency>
-        <!-- <dependency> <groupId>uk.org.lidalia</groupId> <artifactId>sysout-over-slf4j</artifactId>
-            <version>1.0.2</version> </dependency> -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
@@ -378,14 +352,26 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>4.0.0</version>
+            <version>${selenium-java.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- as far as I understand selenium-java and selenium-http-jdk-client need to have same version -->
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-http-jdk-client</artifactId>
+            <version>${selenium-java.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
-            <version>5.0.3</version>
+            <version>${webdrivermanager.version}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-handler</artifactId>
+            <version>${netty.version}</version>
         </dependency>
         <dependency>
 			<artifactId>commons-beanutils</artifactId>
@@ -393,7 +379,7 @@
 			<version>${commons-beanutils.version}</version>
 		</dependency>
 		<dependency>
-			<artifactId>bcprov-jdk15on</artifactId>
+			<artifactId>bcprov-jdk18on</artifactId>
 			<groupId>org.bouncycastle</groupId>
 			<version>${bc.version}</version>
 		</dependency>
@@ -405,7 +391,7 @@
 		<dependency>
             <groupId>io.swagger</groupId>
             <artifactId>swagger-jersey2-jaxrs</artifactId>
-            <version>1.6.4</version>
+            <version>${swagger-jersey2-jaxrs.version}</version>
             <exclusions>
                 <exclusion>
                     <artifactId>jersey-container-servlet-core</artifactId>
@@ -427,7 +413,6 @@
 		<dependency>
 			<groupId>com.amazonaws</groupId>
 			<artifactId>aws-java-sdk-s3</artifactId>
-			<version>1.11.837</version>
 		</dependency>
         <dependency>
 			<groupId>org.apache.commons</groupId>
@@ -519,7 +504,7 @@
         </dependency>
         <dependency>
     		<groupId>org.bytedeco</groupId>
-    		<artifactId>ffmpeg-platform-gpl</artifactId>
+    		<artifactId>ffmpeg-platform</artifactId>
             <version>${javacpp.ffmpeg.version}</version>
             <scope>provided</scope>
         </dependency>
@@ -537,7 +522,7 @@
         <dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
-			<version>2.8.9</version>
+			<version>${gson.version}</version>
 		</dependency>
         <dependency>
             <groupId>org.glassfish.jersey.containers</groupId>
@@ -555,6 +540,13 @@
                 </exclusion>
             </exclusions>
         </dependency>
+		<!-- jackson-databind is a dependency of jersey media. We just explicity add it because there was a vulnerability
+		in the older version. We can remove it after it's updated -->
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>${jackson-databind.version}</version>
+		</dependency>
         <dependency>
             <groupId>org.glassfish.jersey.media</groupId>
             <artifactId>jersey-media-multipart</artifactId>
@@ -562,7 +554,7 @@
         </dependency>
         <dependency>
             <groupId>org.glassfish.jersey.ext</groupId>
-            <artifactId>jersey-spring4</artifactId>
+            <artifactId>jersey-spring6</artifactId>
             <version>${jersey.version}</version>
         </dependency>
         <dependency>
@@ -583,11 +575,6 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>javax.websocket</groupId>
-            <artifactId>javax.websocket-api</artifactId>
-            <version>1.1</version>
-        </dependency>
-        <dependency>
             <groupId>org.awaitility</groupId>
             <artifactId>awaitility</artifactId>
             <version>${awaitility.version}</version>
@@ -596,13 +583,11 @@
         <dependency>
             <groupId>org.glassfish.tyrus</groupId>
             <artifactId>tyrus-server</artifactId>
-            <version>2.0.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.glassfish.tyrus</groupId>
             <artifactId>tyrus-container-grizzly-server</artifactId>
-            <version>2.0.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -623,13 +608,19 @@
         <dependency>
   			<groupId>com.auth0</groupId>
   			<artifactId>jwks-rsa</artifactId>
-  			<version>0.20.2</version>
+  			<version>${jwks-rsa.version}</version>
 		</dependency>
 		<dependency>
   			<groupId>com.auth0</groupId>
   			<artifactId>java-jwt</artifactId>
-  			<version>3.18.3</version>
-		</dependency>
+  			<version>${java-jwt.version}</version>
+		</dependency>		
+		<dependency>
+		   <groupId>org.redisson</groupId>
+		   <artifactId>redisson</artifactId>
+		   <version>${redisson.version}</version>
+		   <scope>provided</scope>
+		</dependency>  
     </dependencies>
     <profiles>
         <profile>
@@ -676,7 +667,6 @@
                                 <configuration>
                                     <outputDirectory>${project.build.directory}/lib</outputDirectory>
                                     <includeScope>compile</includeScope>
-                                    <excludeScope>test</excludeScope>
                                     <excludeGroupIds>org.tensorflow,</excludeGroupIds>
                                     <excludeArtifactIds>cuda,cuda-platform</excludeArtifactIds>
                                     <excludeTransitive>false</excludeTransitive>
@@ -829,7 +819,7 @@
                 </dependency>
                 <dependency>
                     <groupId>io.antmedia.enterprise</groupId>
-                    <artifactId>ant-media-enterprise</artifactId>
+                    <artifactId>ant-media-enterprise${enterprise.profile}</artifactId>
                     <version>${project.parent.version}</version>
                     <type>jar</type>
                 </dependency>
@@ -861,7 +851,6 @@
                                 <configuration>
                                     <outputDirectory>${project.build.directory}/lib</outputDirectory>
                                     <includeScope>compile</includeScope>
-                                    <excludeScope>test</excludeScope>
                                     <excludeTransitive>false</excludeTransitive>
                                 </configuration>
                             </execution>
@@ -906,7 +895,7 @@
                                     <artifactItems>
                                         <artifactItem>
                                             <groupId>io.antmedia.enterprise</groupId>
-                                            <artifactId>ant-media-enterprise</artifactId>
+                                            <artifactId>ant-media-enterprise${enterprise.profile}</artifactId>
                                             <version>${ant-media-server-enterprise.version}</version>
                                             <type>jar</type>
                                             <overWrite>true</overWrite>
